--- a/tbd/templates/tbd/home.html
+++ b/tbd/templates/tbd/home.html
@@ -3,7 +3,7 @@
     <head>
         <title>SnS Big Data</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="/static/css/bootstrap-3.3.5.min.css" rel="stylesheet">
+        <link href="/static/css/bootstrap.min.css" rel="stylesheet">
         <style type="text/css">
     .dropdown-submenu {
         position:relative;
