adjust template contenteditable attributes

--- a/tbd/templates/tbd/project.html
+++ b/tbd/templates/tbd/project.html
@@ -29,12 +29,12 @@
         </table>
         <form>
             <fieldset>
-                <legend contenteditable="true">New/Delete Project</legend>
-                <label contenteditable="true">Project Name</label>
+                <legend contenteditable="false">New/Delete Project</legend>
+                <label contenteditable="false">Project Name</label>
                 <input id="id_target_project" type="text" placeholder="project name">
-                <span class="help-block" contenteditable="true">You can add a new one or delete the old one!</span>
-                <button type="reset" class="btn" contenteditable="true">Reset</button>
-                <button type="submit" class="btn" contenteditable="true">Submit</button>
+                <span class="help-block" contenteditable="false">You can add a new one or delete the old one!</span>
+                <button type="submit" class="btn" contenteditable="false">Delete</button>
+                <button type="submit" class="btn" contenteditable="false">New</button>
             </fieldset>
         </form>
     </div>
