change to use native bootstrap nav

--- a/tbd/templates/tbd/project.html
+++ b/tbd/templates/tbd/project.html
@@ -1,5 +1,6 @@
-{% extends 'tbd/base.html' %}
-{% block title %}SnS Big Data-Project{% endblock %}
+﻿{% extends 'tbd/base.html' %}
+{% block title %}Project - SBD{% endblock %}
+{% block nav_project_attr %}class="active"{% endblock %}
  
 {% block content %}
     <div class="container">
