--- a/tbd/templates/tbd/base.html
+++ b/tbd/templates/tbd/base.html
@@ -1,110 +1,48 @@
 ﻿<!DOCTYPE html>
 <html>
     <head>
-        <title>{% block title %}No title{% endblock %}</title>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <title>{% block title %}No title{% endblock %}</title>
         <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-        <style type="text/css">
-    .dropdown-submenu {
-        position:relative;
-    }
-    .dropdown-submenu>.dropdown-menu {
-        top:0;
-        left:100%;
-        margin-top:-6px;
-        margin-left:-1px;
-        -webkit-border-radius:0 6px 6px 6px;
-        -moz-border-radius:0 6px 6px 6px;
-        border-radius:0 6px 6px 6px;
-    }
-    .dropdown-submenu:hover>.dropdown-menu {
-        display:block;
-    }
-    .dropdown-submenu>a:after {
-        display:block;
-        content:" ";
-        float:right;
-        width:0;
-        height:0;
-        border-color:transparent;
-        border-style:solid;
-        border-width:5px 0 5px 5px;
-        border-left-color:#cccccc;
-        margin-top:5px;
-        margin-right:-10px;
-    }
-    .dropdown-submenu:hover>a:after {
-        border-left-color:#ffffff;
-    }
-    .dropdown-submenu.pull-left {
-        float:none;
-    }
-    .dropdown-submenu.pull-left>.dropdown-menu {
-        left:-100%;
-        margin-left:10px;
-        -webkit-border-radius:6px 0 6px 6px;
-        -moz-border-radius:6px 0 6px 6px;
-        border-radius:6px 0 6px 6px;
-    }
-        </style>
         <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon" />
         <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon" />
     </head>
     
     <body>
-        <div class="navbar navbar-inverse" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="{% url 'tbd_home' %}">Home</a>
+        <div class="container">
+            <div class="row">
+                <div class="span12">
+                    <div class="view">
+                        <ul class="nav nav-tabs" contenteditable="false">
+                            <li {% block nav_home_attr %}{% endblock %}><a href="{% url 'tbd_home' %}">Home</a></li>
+                            <li {% block nav_project_attr %}{% endblock %}><a href="{% url 'tbd_project' %}">Project</a></li>
+                            <li class="disabled"><a href="#">To-Do</a></li>
+                            <li class="dropdown pull-right">
+                                <a href="#" data-toggle="dropdown" class="dropdown-toggle">
+                                    Configuration<b class="caret"></b>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">to-do 1</a></li>
+                                    <li><a href="#">to-do 2</a></li>
+                                    <li><a href="#">to-do 3</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="#">to-do 11</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                Project <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                {% for prj in project %}
-                                <li class="dropdown dropdown-submenu">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ prj.name }}</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="{% url 'tbd_home' %}?project_name={{ prj.name }}">Build List</a></li>
-                                        <li><a href="{% url 'tbd_home' %}?project_name={{ prj.name }}">Test Big Data</a></li>
-                                        <li><a href="{% url 'tbd_home' %}?project_name={{ prj.name }}">Manual Build Data</a></li>
-                                        <li><a href="{% url 'tbd_home' %}?project_name={{ prj.name }}">Manual Test Data</a></li>
-                                    </ul>
-                                </li>
-                                {% endfor %}
-                                <li><a href="{% url 'manual_project') }}">New Project</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                Configure <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">configure 1</a></li>
-                                <li><a href="#">configure 2</a></li>
-                                <li><a href="#">configure 3</a></li>
-                            </ul>
-                        </li>
-                    </ul>
+            </div>
+            <div class="row">
+                <div class="span12">
+                    {% block content %}{% endblock %}
                 </div>
             </div>
         </div>
- 
-        {% block content %}{% endblock %}
-    
+
         <script src="/static/js/jquery-1.11.3.min.js"></script>
         <script src="/static/js/bootstrap.min.js"></script>
-
     </body>
 </html>
