--- a/tbd/templates/tbd/home.html
+++ b/tbd/templates/tbd/home.html
@@ -1,6 +1,7 @@
 ﻿{% extends 'tbd/base.html' %}
 {% block title %}SnS Big Data{% endblock %}
- 
+{% block nav_home_attr %}class="active"{% endblock %}
+
 {% block content %}
     <div class="container">
         <div class="page-header">
