adjust create_time of Project with auto_now_add option

--- a/tbd/templates/tbd/base.html
+++ b/tbd/templates/tbd/base.html
@@ -24,9 +24,9 @@
                                     Configuration<b class="caret"></b>
                                 </a>
                                 <ul class="dropdown-menu">
+                                    <li><a href="/admin">Manage</a></li>
                                     <li><a href="#">to-do 1</a></li>
                                     <li><a href="#">to-do 2</a></li>
-                                    <li><a href="#">to-do 3</a></li>
                                     <li class="divider"></li>
                                     <li><a href="#">to-do 11</a></li>
                                 </ul>
