add django form and flash message, but fail to unit and func test

--- a/tbd/templates/tbd/project.html
+++ b/tbd/templates/tbd/project.html
@@ -40,5 +40,10 @@
                 {% csrf_token %}
             </fieldset>
         </form>
+        {% if error_msg %}
+        <div class="alert alert-danger">
+            <strong>{{ error_type }}!</strong><br/>{{ error_msg|safe }}
+        </div>
+        {% endif %}
     </div>
 {% endblock %}
