--- a/tbd/templates/tbd/project.html
+++ b/tbd/templates/tbd/project.html
@@ -30,10 +30,10 @@
             <fieldset>
                 <legend contenteditable="false">Add Project</legend>
                 <label contenteditable="false">Project Name</label>
-                <input id="id_target_project" name="name" type="text" placeholder="project name">
+                <input id="id_project_name" name="name" type="text" placeholder="project name">
                 <br/>
                 <label contenteditable="false">Owner Name</label>
-                <input name="owner" type="text" placeholder="owner name">
+                <input id="id_project_owner" name="owner" type="text" placeholder="owner name">
                 <span class="help-block" contenteditable="false">You can add a new one or delete the old one!</span>
                 <button class="btn" type="reset" contenteditable="false">Reset</button>
                 <button class="btn" name="add" type="submit" contenteditable="false">Submit</button>
