--- a/tbd/templates/tbd/base.html
+++ b/tbd/templates/tbd/base.html
@@ -18,6 +18,7 @@
                         <ul class="nav nav-tabs" contenteditable="false">
                             <li {% block nav_home_attr %}{% endblock %}><a href="{% url 'tbd_home' %}">Home</a></li>
                             <li {% block nav_project_attr %}{% endblock %}><a href="{% url 'tbd_project' %}">Project</a></li>
+                            <li {% block nav_build_attr %}{% endblock %}><a href="{% url 'tbd_build' %}">Build</a></li>
                             <li class="disabled"><a href="#">To-Do</a></li>
                             <li class="dropdown pull-right">
                                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">
