--- a/tbd/templates/tbd/base.html
+++ b/tbd/templates/tbd/base.html
@@ -6,6 +6,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>{% block title %}No title{% endblock %}</title>
         <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+        {% block user_style %}{% endblock %}
         <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon" />
         <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon" />
     </head>
