--- a/tbd/templates/tbd/project.html
+++ b/tbd/templates/tbd/project.html
@@ -4,7 +4,8 @@
 
 {% block content %}
     <div class="container">
-        <table id="id_project_table" class="table" contenteditable="false">
+        <table id="id_project_table" class="table table-striped table-hover" contenteditable="false">
+            <caption>Project List</caption>
             <thead>
                 <tr>
                     <th>ID</th>
@@ -16,7 +17,7 @@
             </thead>
             <tbody>
                 {% for prj in projects %}
-                <tr {% cycle 'class="info"' '' %}>
+                <tr>
                     <td>{{ forloop.counter }}</td>
                     <td>{{ prj.name }}</td>
                     <td>{{ prj.owner }}</td>
