--- a/tbd/templates/tbd/project.html
+++ b/tbd/templates/tbd/project.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="container">
         <table id="id_project_table" class="table table-striped table-hover" contenteditable="false">
-            <caption>Project List</caption>
+            <caption class="text-center">Project List</caption>
             <thead>
                 <tr>
                     <th>ID</th>
