add js support to display more detailed Build UI

--- a/tbd/templates/tbd/base.html
+++ b/tbd/templates/tbd/base.html
@@ -46,5 +46,6 @@
 
         <script src="/static/js/jquery-1.11.3.min.js"></script>
         <script src="/static/js/bootstrap.min.js"></script>
+        {% block user_js %}{% endblock %}
     </body>
 </html>
