move all tbd static files into 'tbd' subdir

--- a/tbd/templates/tbd/build.html
+++ b/tbd/templates/tbd/build.html
@@ -1,8 +1,8 @@
 ﻿{% extends 'tbd/base.html' %}
 {% block title %}Build - SBD{% endblock %}
 {% block nav_build_attr %}class="active"{% endblock %}
-{% block user_style %}<link href="/static/css/user_style.css" rel="stylesheet">{% endblock %}
-{% block user_js %}<script src="/static/js/user_js.js"></script>{% endblock %}
+{% block user_style %}<link href="/static/tbd/css/user_style.css" rel="stylesheet">{% endblock %}
+{% block user_js %}<script src="/static/tbd/js/user_js.js"></script>{% endblock %}
 
 {% block content %}
     <div class="container">
